<resources>
    <string name="app_name">Schedule_DueDay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">D-Day Scheduler</string>
    <string name="nav_header_subtitle">chlckdgur@thejoeun.ckdgur</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">비상연락망</string>
    <string name="menu_mini_game">미니게임</string>
    <string name="menu_my_page">My 페이지</string>
    <string name="menu_schedule">일정관리</string>
    <string name="menu_d_day">D-Day 등록</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <string name="title_activity_simple_calendar_view" translatable="false">Simple CalendarView</string>
    <string name="title_activity_mini_calendar_view_popup" translatable="false">CalendarView Popup</string>
    <string name="today">today</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="new_event">New Event</string>
    <string name="save">save</string>
    <string name="title">Title</string>
    <string name="completed">Completed</string>
    <string name="set">set</string>
    <string name="double_dots" translatable="false">:</string>
    <string name="select_color_instruction">Select color of event</string>
    <string name="event_default_title">My event</string>
    <string name="no_events">no events</string>
    <string name="delete">delete</string>

</resources>
